# TaskManager

./: CMakeLists.txt  HelperMethods.cpp  HelperMethods.h  UsersInfo.db  main.cpp  ТЗ и краткая архитектура
TaskManager/: SQLite.cpp  TaskManager.cpp  TaskManager.h  TaskProcessing.cpp  TaskProcessing.h
